crates/next-custom-transforms/tests/errors/server-actions/server-graph/13/output.js
/* __next_internal_client_entry_do_not_use__ foo auto */ const { createProxy } = require("private-next-rsc-mod-ref-proxy");
module.exports = createProxy("/app/item.js");
